# AEGIS-X5

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  fix.js  pyproject.toml  replace.js
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
aegis-x5-deploy/: demo-live.html  form-detect.html  index.html  merci.html
docs/: api.md  modules.md  quickstart.md  templates.md
examples/: anthropic_with_connector.py  claude_agent.py  crewai_team.py  fastapi_endpoint.py  langchain_rag.py  langchain_with_connector.py  openai_agent.py  openai_with_connector.py  shield_ops_integration.py  webhook_nodejs_example.js
prompts/: AEGIS-X5-NOTEBOOKLM-PROMPTS.md  AEGIS-X5-PRESENTATIONS-PROMPTS.md
scripts/: simulate_shield_ops.py
site/: aegis-x5-site.html
src/aegis/: __init__.py  cli.py
src/aegis/api/: __init__.py  app.py  auth.py
src/aegis/collect/: __init__.py  registry.py  scheduler.py  sources.py
src/aegis/connectors/: __init__.py  anthropic_connector.py  crewai_connector.py  langchain_connector.py  openai_connector.py  opentelemetry_connector.py  webhook_connector.py
src/aegis/core/: __init__.py  config.py  guard_levels.py  tenant.py  trace.py
src/aegis/dashboard/: __init__.py  html.py  server.py
src/aegis/evaluate/: __init__.py  drift.py  metrics.py  runner.py
src/aegis/guard/: __init__.py  pipeline.py  validators.py
src/aegis/local/: __init__.py  store.py
src/aegis/loops/: __init__.py  base.py  drift_correct.py  guard_tune.py  latency_scale.py  orchestrator.py
src/aegis/observe/: __init__.py  cost.py  exporter.py  metrics.py  tokens.py  tracer.py
src/aegis/predict/: __init__.py  anomaly.py  cost.py  drift.py  engine.py  health_score.py  integration.py
src/aegis/remember/: __init__.py  agent_memory.py  erasure.py  provenance.py  store.py
tests/: test_aegis_client.py  test_aegis_local_mode.py  test_api.py  test_cli.py  test_collect.py  test_config.py  test_connectors.py  test_dashboard.py  test_dashboard_full.py  test_evaluate_drift.py  test_evaluate_metrics.py  test_evaluate_runner.py  test_examples.py  test_guard_levels.py  test_guard_pipeline.py  test_guard_validators.py  test_hse_validators.py  test_local_store.py  test_loops_base.py  test_loops_drift.py  test_loops_guard.py  test_loops_latency.py  test_loops_orchestrator.py  test_observe_cost.py  test_observe_exporter.py  test_observe_metrics.py  test_observe_tokens.py  test_observe_tracer.py  test_predict_anomaly.py  test_predict_cost.py  test_predict_drift.py  test_predict_engine.py  test_predict_health.py  test_predict_integration.py  test_remember_agent.py  test_remember_erasure.py  test_remember_provenance.py  test_remember_store.py  test_shield_ops_simulator.py  test_shield_ops_tenant.py  (+3 more)
whitepapers/: AEGIS-X5-Whitepaper-Closed-Loop-Governance.html  AEGIS-X5-Whitepaper-State-of-Governance-2026.html
(+10 files in other folders)
