[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-x5"
version = "0.3.0"
description = "Autonomous Agent Governance — observe, guard, evaluate, and govern AI agent fleets at scale."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Preventera" },
]
keywords = ["ai", "agents", "governance", "observability", "guardrails"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]
